# phq9-hybrid-reproduction

./: .gitignore  LICENSE  README.md  pyproject.toml
data/: README.md
data/processed/: nhanes_phq9.csv  zenodo_phq9.csv
results/: CROSSVAL.md  RESULTS.md
results/tables/: ablation_3rd_fixed.csv  ablation_core_pair.csv  alpha_sweep_knhanes.csv  alpha_sweep_nhanes.csv  alpha_sweep_zenodo.csv  crossval_summary.csv  estimator_comparison.csv  item_importance.csv
src/: ablation_core_pair.py  ablation_fixed_item.py  crossval.py  download_nhanes.py  download_zenodo.py  experiment.py  hybrid.py  item_importance.py  perf_bench.py  prep_knhanes.py  replot_alpha.py  replot_comparison.py
