[project]
name = "danbam-experiment"
version = "0.1.0"
description = "Validation of a PHQ-9 hybrid short-form (3 fixed + 2 random) against the full 9-item PHQ-9"
requires-python = ">=3.11"
dependencies = [
    "pandas>=2.0",
    "numpy>=1.26",
    "scipy>=1.11",
    "scikit-learn>=1.3",
    "matplotlib>=3.8",
    "pyreadstat>=1.2",
    "python-docx>=1.2.0",
]

[tool.rye]
managed = true
virtual = true
dev-dependencies = []

[[tool.rye.sources]]
name = "default"
url = "https://pypi.org/simple/"
